--- a/Android/Notes/app/src/main/res/layout/note_list_item.xml
+++ b/Android/Notes/app/src/main/res/layout/note_list_item.xml
@@ -12,7 +12,8 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginLeft="16dp"
-        android:background="@drawable/circle_shape"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/ic_note_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
