--- a/Android/Notes/app/src/main/res/drawable/ic_delete_black_48dp.xml
+++ b/Android/Notes/app/src/main/res/drawable/ic_delete_black_48dp.xml
@@ -1,5 +1,5 @@
 <vector android:height="48dp" android:tint="#2E2E2E"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M22,10l-6,-6L4,4c-1.1,0 -2,0.9 -2,2v12.01c0,1.1 0.9,1.99 2,1.99l16,-0.01c1.1,0 2,-0.89 2,-1.99v-8zM15,5.5l5.5,5.5L15,11L15,5.5z"/>
+    <path android:fillColor="#FF000000" android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7H6v12zM19,4h-3.5l-1,-1h-5l-1,1H5v2h14V4z"/>
 </vector>
