--- a/Android/Notes/app/src/main/res/drawable/ic_plus_icon.xml
+++ b/Android/Notes/app/src/main/res/drawable/ic_plus_icon.xml
@@ -1,7 +1,7 @@
 <vector android:height="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    android:tint="#2E2E2E"
+    android:tint="#D6E1FA"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0" >
     <path android:fillColor="#FF000000" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
