--- a/Android/Notes/app/src/main/res/layout/add_or_edit_note_fragment.xml
+++ b/Android/Notes/app/src/main/res/layout/add_or_edit_note_fragment.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:layout_editor_absoluteX="46dp"
+    tools:layout_editor_absoluteY="277dp">
 
     <TextView
-        android:id="@+id/tvDateNote"
+        android:id="@+id/note_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        android:textSize="@dimen/note_date_list_text_margin"
+        android:layout_marginStart="@dimen/element_top_left_right_margin"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
+        android:layout_marginTop="@dimen/element_top_left_right_margin"
         android:textColor="@color/meta_text_list_color"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="@dimen/note_date_list_text_margin"
+        style="@style/text_view_meta"
+        tools:text="TextView" />
 
     <EditText
-        android:id="@+id/etTitleNote"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/primary_text_height"
-        android:layout_marginTop="16dp"
-        android:gravity="bottom"
-        android:text="TextView"
-        android:textSize="@dimen/note_title_list_text_margin"
-        android:textColor="@color/primary_text_list_color"
-        app:layout_constraintStart_toStartOf="@id/tvDateNote"
-        app:layout_constraintTop_toBottomOf="@+id/tvDateNote" />
-
-    <ScrollView
-        android:id="@+id/ScrollView01"
+        android:id="@+id/note_edit_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/etTitleNote"
-        app:layout_constraintTop_toBottomOf="@+id/etTitleNote">
+        android:layout_marginStart="@dimen/element_top_left_right_margin"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
+        android:layout_marginTop="@dimen/element_top_left_right_margin"
+        android:gravity="bottom"
+        style="@style/text_view_primary"
+        android:hint="Заголовок"
+        android:textColor="@color/primary_text_list_color"
+        android:textSize="@dimen/note_title_list_text_margin"
+        tools:text="TextView" />
+    <EditText
+        android:id="@+id/note_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/element_top_left_right_margin"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
+        android:layout_marginTop="@dimen/element_top_left_right_margin"
+        android:gravity="left|top"
+        android:hint="Текст"
+        android:inputType="textMultiLine"
+        tools:text="Text" />
 
-        <EditText
-            android:id="@+id/etTextNote"
-            android:layout_width="380dp"
-            android:layout_height="608dp"
-            android:layout_marginTop="16dp"
-
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:gravity="left|top"
-            android:text="Text"
-            android:maxLines="20"
-            android:textColor="@color/secondary_text_list_color"
-            android:textSize="@dimen/note_text_list_text_margin" />
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
