--- a/Android/Notes/app/src/main/res/layout/note_list_item.xml
+++ b/Android/Notes/app/src/main/res/layout/note_list_item.xml
@@ -2,69 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="72dp">
 
-
     <View
-        android:id="@+id/circlePoint"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:id="@+id/circle_point"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/element_top_left_right_margin"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
         android:background="@drawable/ic_note_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/note_item_title"
+        style="@style/text_view_primary"
         android:layout_width="0dp"
         android:layout_height="@dimen/primary_text_height"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="28dp"
-        android:gravity="bottom"
-        android:text="Title"
-        android:textSize="@dimen/note_title_list_text_margin"
-        android:textColor="@color/primary_text_list_color"
-        app:layout_constraintEnd_toStartOf="@+id/tvDate"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
+        android:layout_marginTop="@dimen/element_top_left_right_margin"
+        android:layout_marginRight="@dimen/element_top_left_right_margin"
+        android:gravity="top"
+        app:layout_constraintEnd_toStartOf="@+id/note_item_date"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/circlePoint"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintStart_toEndOf="@+id/circle_point"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Title" />
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/note_item_date"
+        style="@style/text_view_meta"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/primary_text_height"
+        android:layout_marginEnd="@dimen/element_top_left_right_margin"
+        android:layout_marginRight="@dimen/element_top_left_right_margin"
         android:gravity="bottom"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="date"
-        android:textSize="@dimen/note_date_list_text_margin"
-        android:textColor="@color/meta_text_list_color"
-        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="@+id/note_item_title"
+        app:layout_constraintBaseline_toBaselineOf="@+id/note_item_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvTitle" />
+        app:layout_constraintTop_toTopOf="@+id/note_item_title"
+        tools:text="date" />
 
     <TextView
-        android:id="@+id/tvText"
+        android:id="@+id/note_item_text"
+        style="@style/text_view_secondary"
         android:layout_width="0dp"
-        android:layout_height="@dimen/secondary_text_height"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="16dp"
-
-        android:layout_marginRight="16dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="@dimen/element_top_left_right_margin"
+        android:layout_marginLeft="@dimen/element_top_left_right_margin"
+        android:layout_marginEnd="@dimen/element_top_left_right_margin"
+        android:layout_marginRight="@dimen/element_top_left_right_margin"
         android:gravity="left|bottom"
-        android:text="Text"
-        android:textColor="@color/secondary_text_list_color"
-        android:textSize="@dimen/note_text_list_text_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/circlePoint"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintStart_toEndOf="@+id/circle_point"
+        app:layout_constraintTop_toBottomOf="@+id/note_item_title"
+        tools:text="Text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
