--- a/Android/Notes/app/src/main/res/values/dimens.xml
+++ b/Android/Notes/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="element_top_left_right_margin">16dp</dimen>
     <dimen name="primary_text_height">22dp</dimen>
     <dimen name="secondary_text_height">18dp</dimen>
+    <dimen name="bottom_sheet_peek_height">50dp</dimen>
 </resources>
