--- a/Android/Notes/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/Android/Notes/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -28,10 +28,8 @@
             style="@style/TextViewPrimary"
             android:layout_width="match_parent"
             android:layout_height="@dimen/bottom_sheet_peek_height"
-            android:background="#FFFFFF"
             android:gravity="center"
-            android:text="@string/bottom_sheet_peek"
-            android:textColor="#000000" />
+            android:text="@string/bottom_sheet_peek"/>
     </LinearLayout>
 
     <LinearLayout
