--- a/Android/Notes/app/src/main/res/layout/notes_list_fragment.xml
+++ b/Android/Notes/app/src/main/res/layout/notes_list_fragment.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/main_top_bottom_margin"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_anchor="@+id/bottom_sheet"
-        android:id="@+id/recycler_view_note_list"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/note_list_views_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek_height"/>
+        android:visibility="invisible"
+        android:orientation="vertical">
 
-    <include layout="@layout/bottom_sheet_layout"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_note_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/bottom_sheet_peek_height"
+            app:layout_anchor="@+id/bottom_sheet" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        app:layout_anchor="@+id/bottom_sheet"
-        app:layout_anchorGravity="top|end"
-        android:id="@+id/add_note_fab"
+        <include layout="@layout/bottom_sheet_layout" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_note_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/element_top_left_right_margin"
+            android:backgroundTint="@color/color_primary"
+            android:src="@drawable/ic_plus_icon"
+            app:layout_anchor="@+id/bottom_sheet"
+            app:layout_anchorGravity="top|end" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar_load_data"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/element_top_left_right_margin"
-        android:backgroundTint="@color/color_primary"
-        android:src="@drawable/ic_plus_icon"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_gravity="center" />
+</FrameLayout>
