notes 4.0-st iteration
Data binding - правка замечаний

--- a/Android/Notes/app/src/main/res/layout/add_or_edit_note_fragment.xml
+++ b/Android/Notes/app/src/main/res/layout/add_or_edit_note_fragment.xml
@@ -40,6 +40,7 @@
             android:gravity="bottom"
             android:hint="Заголовок"
             android:text="@={model.noteBind.title}"
+            android:inputType="textCapSentences"
             android:textColor="@color/primary_text_list_color"
             android:textSize="@dimen/note_title_list_text_margin"
             tools:text="TextView" />
@@ -53,7 +54,7 @@
             android:layout_marginRight="@dimen/element_top_left_right_margin"
             android:gravity="left|top"
             android:hint="Текст"
-            android:inputType="textMultiLine"
+            android:inputType="textCapSentences|textMultiLine"
             android:text="@={model.noteBind.content}"
             tools:text="Text" />
     </LinearLayout>
